src/qml/qml/qqmltypeloader_p.h
@@ -390,6 +390,7 @@ public:
 
         QQmlScript::Location location;
         QString qualifier;
+        QString nameSpace;
         QQmlScriptBlob *script;
     };
 
